--- a/ProyectoCRUD/peliculas/templates/peliculas/base.html
+++ b/ProyectoCRUD/peliculas/templates/peliculas/base.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block titulo %} {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{% url 'listar-peliculas' %}" class="nav-link text-light fw-bold fs-4">PelisPedia</a>
+                </li>
+            </ul>
+            
+        </div>
+    </nav>
     {% block contenido %} {% endblock %}
 </body>
 
