Se agregaron las funciones de Update y Delet para las películas

--- a/ProyectoCRUD/peliculas/templates/peliculas/read.html
+++ b/ProyectoCRUD/peliculas/templates/peliculas/read.html
@@ -9,7 +9,11 @@
 <a href="{% url 'create-pelicula' %}">Añadir película</a>
 <ul>
     {% for pelicula in peliculas %}
-    <li class="text-light"><a href="{% url 'read-pelicula' pelicula.id %}">{{ pelicula.titulo }}</a></li>
+    <li class="text-light">
+        <a href="{% url 'read-pelicula' pelicula.id %}">{{ pelicula.titulo }}</a>
+        <a href="{% url 'update-pelicula' pelicula.id %}" class="btn btn-sm btn-primary">Editar</a>
+        <a href="{% url 'delete-pelicula' pelicula.id %}" class="btn btn-sm btn-danger">Eliminar</a>
+    </li>
     {% endfor %}
 </ul>
 {% endblock %}
