--- a/ProyectoCRUD/peliculas/static/css/base.css
+++ b/ProyectoCRUD/peliculas/static/css/base.css
@@ -26,3 +26,35 @@ nav{
     display: flex;
     align-items: center;
 }
+
+.item-pelicula {
+    font-family: sans-serif;
+    list-style: none;
+}
+
+.underline{
+    text-decoration: underline;
+}
+
+ul{
+    list-style: none;
+}
+li{
+    list-style: none;
+}
+ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+.mr-2{
+    margin-right: 1em;
+}
+
+.ml-2{
+    margin-left: 1em;
+}
+
+.boton-add{
+    background-color: #5B8A72;
+}
